--- a/common/Footer/footer.module.css
+++ b/common/Footer/footer.module.css
@@ -1,7 +1,7 @@
 .footer_section{
     background: url(/images/BG.png);
     width: 100%;
-    height: 400px;
+    padding: 30px 0px;
     object-fit: cover;
     display: flex;
     justify-content: center;
@@ -59,4 +59,27 @@
     color: #60636f;
     font-size: 14px;
     font-family: 'Poppins', sans-serif;
+}
+
+
+/* Responsive Footer */
+
+
+
+@media (max-width:625px) { 
+
+    .footer_com{
+        width: 95%;
+        display: grid;
+    }
+    .footer_box{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        border: none;
+    }
+    .footer_Rights{
+        display: none;
+       
+  }
 }
