--- a/common/Single Agent/singleagent.module.css
+++ b/common/Single Agent/singleagent.module.css
@@ -86,3 +86,127 @@
 .agent_more_link{
     color: #232A43;
 }
+
+
+/* ======  Responsive Card     ========= */
+
+@media (max-width:1414px) { 
+    .single_agent_box {
+        width: 520px;
+    }
+  }
+
+
+  @media (max-width:1144px) { 
+    .single_agent_box {
+        width: 480px;
+    }
+  
+  }
+
+
+  @media (max-width:1032px) { 
+    .single_agent_box {
+        width: 450px;
+    }
+  }
+
+  
+  @media (max-width:963px) { 
+    .single_agent_box {
+        width: 420px;
+    }
+  }
+
+  @media (max-width:963px) { 
+    .single_agent_box {
+        width: 400px;
+    }
+  }
+
+  @media (max-width:839px) { 
+    .single_agent_box {
+        width: 520px;
+    }
+  }
+
+  @media (max-width:630px) { 
+    .single_agent_box {
+        width: 430px;
+    }
+    .single_agent_img {
+        width: 80px;
+        height: 80px;
+    
+    }
+  }
+
+
+  
+  @media (max-width:630px) { 
+    .single_agent_box {
+        width: 400px;
+    }
+    .single_agent_img {
+        width: 60px;
+        height: 60px;
+    
+    }
+  }
+
+
+  @media (max-width:517px) { 
+    .single_agent_box {
+        width: 370px;
+
+    }
+    .single_agent_img {
+        width: 60px;
+        height: 60px;
+    
+    }
+  }
+
+
+  @media (max-width:395px) { 
+    .single_agent_box {
+        width: 300px;
+    }
+    .single_agent_img {
+        width: 60px;
+        height: 60px;
+    }
+
+    .single_agent_card {
+        display: grid; 
+    }
+  }
+
+  @media (max-width:395px) { 
+    .single_agent_box {
+        width: 280px;
+    }
+    .single_agent_img {
+        width: 50px;
+        height: 50px;
+    }
+
+    .single_agent_card {
+        display: grid; 
+    }
+  }
+
+  
+  @media (max-width:280px) { 
+    .single_agent_box {
+        width: 250px;
+    }
+    .single_agent_img {
+        width: 50px;
+        height: 50px;
+    }
+
+    .single_agent_card {
+        display: grid; 
+    }
+  }
