--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,12 +1,12 @@
 /* ==========   Navigation ================= */
 
-.navbar{
+.navbar {
   padding: 15px 43px;
   display: flex;
   justify-content: space-between;
 }
 
-.flag_box{
+.flag_box {
   padding: 12px 10px;
   border: 1px solid #979d95;
   border-radius: 4px;
@@ -14,15 +14,16 @@
   justify-content: center;
   align-items: center;
 }
-.nav_menu_box{
+
+.nav_menu_box {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
   gap: 20px;
 }
 
-.nav_menu{
-  padding: 8px  9px;
+.nav_menu {
+  padding: 8px 9px;
   border: 1px solid #979d95;
   border-radius: 4px;
   display: flex;
@@ -38,7 +39,7 @@
 
 /* ==========   Homepage Background ================= */
 
-.homepage{
+.homepage {
   background: url(../public/images/homepage.png);
   width: 100%;
   height: 556px;
@@ -47,7 +48,7 @@
   padding-bottom: 50px;
 }
 
-.homepage_box{
+.homepage_box {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -57,7 +58,7 @@
 }
 
 
-.homepage_text_box{
+.homepage_text_box {
   margin-top: -87px;
   text-align: center;
   display: flex;
@@ -66,45 +67,49 @@
   margin-right: 10px;
 }
 
-.homepage_text_heading{
-  font-family: 'Lato', sans-serif; 
+.homepage_text_heading {
+  font-family: 'Lato', sans-serif;
   font-size: 54px;
   font-weight: 700;
   color: #ffffff;
 }
-.homepage_text{
+
+.homepage_text {
   color: #ffffff;
   font-family: 'Poppins', sans-serif;
   font-size: 19px;
   font-weight: 300;
 }
 
-.homepage_searchbox{
+.homepage_searchbox {
   width: 1000px;
   height: 82px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding:0px 10px;
+  padding: 0px 10px;
   background-color: #ffffff;
   border-radius: 4px;
   margin-top: 32px;
 }
-.search_input_box{
+
+.search_input_box {
   display: flex;
   align-items: center;
 }
 
-.search_icon{
+.search_icon {
   margin-left: 17px;
   color: #9895ab;
   font-size: 24px;
   cursor: pointer;
 }
-.search_input_box{
+
+.search_input_box {
   position: relative;
 }
-.search_input{
+
+.search_input {
   width: 600px;
   font-size: 20px;
   outline: none;
@@ -113,7 +118,7 @@
   margin-left: 10px;
 }
 
-.search_btn{
+.search_btn {
   padding: 15px 20px;
   border-radius: 5px;
   outline: none;
@@ -130,42 +135,43 @@
 /* =======   MOST ACTIVE AGENTS */
 
 
-.active_agent_section{
- display: flex;
- justify-content: center;
- align-items: center;
+.active_agent_section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.active_agent_box{
-  width: 80%;
+.active_agent_box {
+  width: 90%;
 }
 
-.active_agent_title{
-color: #232A43;
-font-size: 35px;
-font-family: 'Lato', sans-serif; 
-margin-top: 50px !important;
+.active_agent_title {
+  color: #232A43;
+  font-size: 35px;
+  font-family: 'Lato', sans-serif;
+  margin-top: 50px !important;
 
 }
 
 
-.active_agent_heading{
-color: #777A84;
-font-size: 20px;
-font-family: 'Poppins', sans-serif;
-margin-top: 20px;
+.active_agent_heading {
+  color: #777A84;
+  font-size: 20px;
+  font-family: 'Poppins', sans-serif;
+  margin-top: 20px;
 }
 
-.agent_box{
+.agent_box {
   margin-top: 50px;
   display: grid;
   grid-template-columns: repeat(auto-fit,
-  minmax(640px,100px));
+      minmax(640px, 100px));
   gap: 50px;
+  justify-content: center;
 }
 
 
-.pagination_box{
+.pagination_box {
   margin-top: 80px;
   display: flex;
   justify-content: center;
@@ -175,13 +181,13 @@ margin-top: 20px;
 
 /*===========        Choose Agent Section =============  */
 
-.choose_agent_section{
+.choose_agent_section {
   display: flex;
   justify-content: center;
   margin-top: 50px;
 }
 
-.choose_agent_box{
+.choose_agent_box {
   width: 80%;
   display: flex;
   justify-content: center;
@@ -189,17 +195,17 @@ margin-top: 20px;
   gap: 30px;
 }
 
-.choose_agent_img_box{
+.choose_agent_img_box {
   width: 550px;
 }
 
-.choose_agent_img_box img{
- height: 100%;
- object-fit: cover;
+.choose_agent_img_box img {
+  height: 100%;
+  object-fit: cover;
 
 }
 
-.choose_agent_heading{
+.choose_agent_heading {
   font-family: 'Poppins', sans-serif;
   font-size: 14px;
   color: #4B6DF3;
@@ -207,15 +213,15 @@ margin-top: 20px;
   padding-bottom: 10px;
 }
 
-.choose_agent_title{
+.choose_agent_title {
   color: #232A43;
   font-size: 35px;
   font-weight: 700;
-  font-family: 'Lato', sans-serif; 
+  font-family: 'Lato', sans-serif;
   padding-bottom: 15px;
 }
 
-.choose_agent_box_des_text{
+.choose_agent_box_des_text {
   font-size: 18px;
   font-family: 'Poppins', sans-serif;
   color: #232A43;
@@ -224,27 +230,28 @@ margin-top: 20px;
 }
 
 
-.choose_agent_box_list{
+.choose_agent_box_list {
   font-family: 'Poppins', sans-serif;
   font-size: 18px;
   font-weight: 500;
-  color: #232A43 !important; 
+  color: #232A43 !important;
 }
 
-.choose_agent_list_box{
+.choose_agent_list_box {
   display: flex;
   align-items: center;
   gap: 20px;
   margin-bottom: 20px;
 }
+
 .choose_agent_list {
- padding: 8px;
+  padding: 8px;
   background-color: #4e5469;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
 }
 
-.choose_agent_box_btn{
+.choose_agent_box_btn {
   padding: 8px 10px;
   background-color: #4B6DF3;
   color: white;
@@ -258,42 +265,42 @@ margin-top: 20px;
 
 /*=======    Connect Box    =============== */
 
-.connect_box_section{
+.connect_box_section {
   background-color: #12182D;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 120px;
-  
+
 }
 
-.connect_box{
+.connect_box {
   display: flex;
   align-items: center;
   justify-content: center;
-width: 80%;
+  width: 80%;
 
 }
 
-.connect_box_text{
+.connect_box_text {
   width: 80%;
 }
 
-.connect_box_text_title{
-  font-family: 'Lato', sans-serif; 
+.connect_box_text_title {
+  font-family: 'Lato', sans-serif;
   font-weight: 700;
   font-size: 35px;
   color: white;
 }
 
-.connect_box_text_heading{
+.connect_box_text_heading {
   font-family: 'Poppins', sans-serif;
   font-size: 16px;
   color: white;
 }
 
-.connect_box_search_box{
+.connect_box_search_box {
   width: 500px;
   height: 45px;
   background-color: white;
@@ -306,24 +313,24 @@ width: 80%;
 }
 
 
-.connect_box_input{
- width: 400px;
- height: 30px;
- outline: none;
- border: none;
-padding-left: 20px;
-position: absolute;
-font-family: 'Poppins', sans-serif;
+.connect_box_input {
+  width: 400px;
+  height: 30px;
+  outline: none;
+  border: none;
+  padding-left: 20px;
+  position: absolute;
+  font-family: 'Poppins', sans-serif;
 }
 
-.connect_box_icon_box{
+.connect_box_icon_box {
   position: absolute;
   background-color: #4B6DF3;
   right: 0.2%;
   padding: 8.8px 22px;
 }
 
-.connect_box_icon{
+.connect_box_icon {
   color: white;
   font-size: 20px;
 }
@@ -332,7 +339,7 @@ font-family: 'Poppins', sans-serif;
 /*=======  Real Time Conversation  ============= */
 
 
-.realtime_agent_box{
+.realtime_agent_box {
   width: 80%;
   display: flex;
   flex-direction: row-reverse;
@@ -344,24 +351,527 @@ font-family: 'Poppins', sans-serif;
 
 /* ==========   Latest Articles by Agents  ========================== */
 
-.articlesby_section{
+.articlesby_section {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 50px;
 }
 
-.articlesby_box{
-  display: grid;
+.articlesby_title {
+  color: #232A43;
+  font-size: 35px;
+  font-weight: 700;
+  font-family: 'Lato', sans-serif;
+}
+
+.articlesby_box {
   width: 80%;
-
-  align-items: center;
 }
 
-.article_box{
+.article_box {
   margin-top: 50px;
   display: grid;
-  justify-content: center;
   grid-template-columns: repeat(auto-fit,
-  minmax(430px,100px));
-  gap: 20px;
+      minmax(400px, 100px));
+  gap: 50px;
+  justify-content: center;
+
+}
+
+
+
+
+
+
+
+
+
+/* ==========  Responsive Design   ============= */
+
+
+@media (max-width:1665px) {
+  .agent_box {
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,
+        minmax(600px, 100px));
+    gap: 50px;
+  }
+
+
+}
+
+@media (max-width:1565px) {
+  .agent_box {
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,
+        minmax(590px, 100px));
+    gap: 50px;
+  }
+
+}
+
+@media (max-width:1537px) {
+  .agent_box {
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,
+        minmax(560px, 100px));
+    gap: 50px;
+  }
+
+}
+
+
+@media (max-width:1465px) {
+  .agent_box {
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,
+        minmax(552px, 100px));
+    gap: 50px;
+  }
+
+}
+
+@media (max-width:1445px) {
+  .agent_box {
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,
+        minmax(540px, 100px));
+  }
+
+  .connect_box_search_box {
+    width: 400px;
+  }
+
+  .connect_box_input {
+    width: 300px;
+    background-color: transparent;
+  }
+
+
+}
+
+
+@media (max-width:1414px) {
+  .agent_box {
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,
+        minmax(505px, 100px));
+  }
+
+}
+
+@media (max-width:1290px) {
+  .choose_agent_box {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .realtime_agent_box {
+    width: 80%;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+
+  }
+
+
+}
+
+
+@media (max-width:1180px) {
+  .agent_box {
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,
+        minmax(490px, 100px));
+  }
+
+}
+
+@media (max-width:1146px) {
+  .agent_box {
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,
+        minmax(450px, 100px));
+  }
+
+}
+
+@media (max-width:1080px) {
+  .homepage_searchbox {
+    width: 600px;
+  }
+
+  .search_input {
+    width: 230px;
+  }
+
+  .agent_box {
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,
+        minmax(440px, 100px));
+  }
+
+  .connect_box_text_title {
+    font-family: 'Lato', sans-serif;
+    font-weight: 700;
+    font-size: 25px;
+    color: white;
+  }
+
+  .connect_box_text_heading {
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+    color: white;
+  }
+}
+
+@media (max-width:1033px) {
+  .agent_box {
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,
+        minmax(420px, 100px));
+  }
+}
+
+@media (max-width:992px) {
+  .agent_box {
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,
+        minmax(390px, 100px));
+  }
+}
+
+@media (max-width:924px) {
+  .agent_box {
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,
+        minmax(385px, 100px));
+  }
+}
+
+@media (max-width:911px) {
+  .agent_box {
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,
+        minmax(360px, 100px));
+  }
+}
+
+
+@media (max-width:856px) {
+  .agent_box {
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,
+        minmax(350px, 100px));
+  }
+
+  .connect_box_text {
+    width: 100%;
+  }
+
+  .connect_box_text_title {
+    font-size: 20px;
+    color: white;
+  }
+
+  .connect_box_text_heading {
+    font-size: 14px;
+    color: white;
+  }
+
+  .connect_box_search_box {
+    width: 300px;
+    height: 45px;
+    background-color: white;
+    border-radius: 4px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 10px;
+    position: relative;
+  }
+
+
+  .connect_box_input {
+    width: 128px;
+  }
+
+}
+
+@media (max-width:839px) {
+  .agent_box {
+    grid-template-columns: repeat(auto-fit,
+        minmax(480px, 100px));
+  }
+}
+
+@media (max-width:625px) {
+  .homepage_text_heading {
+    font-size: 30px;
+    white-space: nowrap;
+  }
+
+  .homepage_text {
+    font-size: 14px;
+
+  }
+
+  .homepage_searchbox {
+    width: 400px;
+    height: 72px;
+  }
+
+  .search_icon {
+    margin-left: 17px;
+    color: #9895ab;
+    font-size: 24px;
+    cursor: pointer;
+  }
+
+  .search_input {
+    width: 100px;
+    font-size: 20px;
+    outline: none;
+    color: black;
+    border: none;
+    margin-left: 10px;
+  }
+
+  .search_btn {
+    padding: 15px 20px;
+    font-size: 17px;
+    white-space: nowrap;
+  }
+
+  .connect_box_text_title {
+    font-size: 16px;
+
+  }
+
+  .connect_box_text_heading {
+    font-size: 10px;
+  }
+
+  .connect_box_search_box {
+    width: 300px;
+    ;
+    padding: 20px 10px;
+    position: relative;
+  }
+
+
+  .connect_box_input {
+    width: 108px;
+  }
+
+  .realtime_agent_img {
+    width: 350px;
+  }
+
+  .active_agent_title {
+    font-size: 28px;
+  }
+
+
+  .active_agent_heading {
+    font-size: 16px;
+    margin-top: 5px;
+  }
+
+  .choose_agent_img_box {
+    width: 550px;
+  }
+
+  .choose_agent_img{
+    width: 300px;
+  }
+
+}
+
+@media (max-width:600px) {
+  .homepage_text_heading {
+    font-size: 30px;
+    white-space: nowrap;
+  }
+
+  .homepage_text {
+    font-size: 14px;
+
+  }
+
+  .homepage_searchbox {
+    width: 400px;
+    height: 72px;
+  }
+
+  .search_icon {
+    margin-left: 17px;
+    color: #9895ab;
+    font-size: 24px;
+    cursor: pointer;
+  }
+
+  .search_input {
+    width: 100px;
+    font-size: 20px;
+    outline: none;
+    color: black;
+    border: none;
+    margin-left: 10px;
+  }
+
+  .search_btn {
+    padding: 15px 20px;
+    font-size: 17px;
+    white-space: nowrap;
+  }
+
+  .agent_box {
+    grid-template-columns: none;
+  }
+
+}
+
+
+@media (max-width:530px) {
+  .homepage_text_heading {
+    font-size: 18px;
+  }
+
+  .homepage_text {
+    font-size: 13px;
+  }
+
+  .agent_box {
+    grid-template-columns: none;
+  }
+
+  .search_icon {
+    margin-left: 17px;
+    font-size: 19px;
+
+  }
+
+  .search_input {
+    width: 100px;
+    font-size: 20px;
+  }
+
+  .search_btn {
+    padding: 15px 20px;
+    font-size: 17px;
+    white-space: nowrap;
+  }
+
+  .active_agent_box {
+    width: 90%;
+  }
+
+  .active_agent_title {
+    font-size: 25px;
+  }
+
+
+  .active_agent_heading {
+    font-size: 14px;
+    margin-top: 5px;
+  }
+
+  .article_box {
+    grid-template-columns: none;
+  }
+
+}
+
+@media (max-width:415px) {
+  .homepage_text_heading {
+    font-size: 18px;
+  }
+
+  .homepage_text {
+    font-size: 13px;
+  }
+
+  
+  .search_icon {
+    margin-left: 0px;
+    font-size: 19px;
+
+  }
+
+  .search_input {
+    width: 10px;
+    font-size: 20px;
+  }
+
+  .search_btn {
+    padding: 5px 3px;
+    font-size: 10px;
+    white-space: nowrap;
+  }
+  
+  .homepage_searchbox {
+    width: 280px;
+    height: 40px;
+    padding: 10px 10px;
+    margin-top: 32px;
+  }
+ 
+
+}
+
+@media (max-width:380px) {
+  .connect_box_section{
+    display: none;
+  }
+}
+
+@media (max-width:298px) {
+
+  .homepage_text_heading {
+    font-size: 17px;
+  }
+  
+  .homepage_text {
+    font-size: 12px;
+
+  }
+  .homepage_searchbox {
+    width: 200px;
+    height: 40px;
+  }
+
+  .search_input {
+    width: 10px;
+    font-size: 20px;
+    outline: none;
+    color: black;
+    border: none;
+    margin-left: 10px;
+  }
+
+  .search_btn {
+    padding: 6px 8px;
+    font-size: 10px;
+    white-space: nowrap;
+  }
 }
